# pyplates

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.rst  requirements_dev.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  installation.rst  make.bat  usage.rst
pyplates/: __init__.py  cli.py
tests/: __init__.py  test_pyplates.py
