[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:pyplates/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[metadata]
license_files = LICENSE

[flake8]
exclude = docs
extend-ignore = E203, W503
max-line-length = 79

[aliases]
# Define setup.py command aliases here
test = pytest

[isort]
combine_as_imports = True
include_trailing_comma = True
line_length = 79
multi_line_output = 3

[tool:pytest]
collect_ignore = ['setup.py']
addopts = -rs
